# fft-ocean

./: .gitignore  CMakeLists.txt  README.md
src/: Ocean.cpp  Ocean.h  main.cpp
